# Elf

./: .gitignore  developer guide.md  naming_pattern.md  readme.md  settings.json
core/: Cargo.toml  not_ready.py  pyproject.toml  update_elf_py.bat
core/common/: __init__.py  context.py  data.py  effector.py  executable.py  interface.py  interface_creator.py  operator_resource.py  resource.py  schema.py  structure.py
core/common/network/: __init__.py  dataflow.py  dataflow_node.py  effect_node.py  init_data.py  input_data.py  interface_node.py  network.py  network_node.py  operator_node.py  output_data.py  reform.py
core/core_py/common/: __init__.py  data.py  effector.py  executable.py  interface.py  interface_creator.py  operator_resource.py  resource.py  schema.py  structure.py
core/core_py/elfscript_compiler/: __init__.py  schema_compiler.py
core/core_py/network_interpreter/: naive_network_interpreter.py
core/core_py/plugin_loader/: __init__.py
core/core_py/ui/: __init__.py  common.py  palette.py
core/elfscript_compiler/: __init__.py  help.py  schema_compiler.py
core/help/: __init__.py  circle_linked_list.py
core/network_interpreter/: __init__.py  naive_network_interpreter.py
core/plugin_loader/: __init__.py
core/py_rust/main/: Cargo.toml
core/src/: lib.rs  starter.rs  test.rs
core/src/backend/: mod.rs
core/src/common/: data.rs  mod.rs  schema.rs  structure.rs
core/src/frontend/: mod.rs
core/src/graph/: arbitary_data.rs  data_duplication.rs  dependency.rs  help.rs  interface.rs  mod.rs  (+4 more)
core/ui/: __init__.py  common.py  palette.py
(+125 files in other folders)
