[lib]
[package]
name = "elf"
version = "0.1.0"
edition = "2021"

[dependencies.pyo3]
version = "0.19.0"
features = ["auto-initialize", "extension-module"]

[dependencies.rustpython-parser]
[dependencies.rustpython-ast]
[dependencies.num-bigint]
[dependencies.serde]
[dependencies.serde_json]
[dependencies.once_cell]
